--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-
+ 
 
 
 <html lang="ar">
@@ -9,13 +9,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>learn css in 1hr</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
 
+<!-- for fonts libraries -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
+
+<!-- for bootstrap css library -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    
     <link rel="stylesheet" href="style.css" />
 
     <script defer src="main.js"></script>
@@ -31,7 +34,7 @@
               ALL Courses
             </a>
           </li>
-          <li><a href=""> About Us </a></li>
+          <li><a href="./AboutUs.html"> About Us </a></li>
           <button id="mode">change mode</button>
           <li><a href=""> Support Us </a></li>
         </ul>
@@ -80,9 +83,12 @@
 
       <section >
         <h1 dir="rtl"> 😍Products😍 </h1>
-       <div class="parent">
-<!-- .......................... product 1 .............................. -->
+        <br>
 
+        <button id="addproduct" class="btn btn-primary""> Add Product</button>
+
+        <!-- .......................... product 1 .............................. -->
+<div id="product_container" class="parent">
         <div id="pr" class="card mycard">
             <img style="border-radius: 10px;" src="pexels-cottonbro-3826678.jpg" class="card-img-top" alt="...">
             <div class="card-body">
@@ -146,7 +152,7 @@
         <a id="buy" href="#"  class="js_buy btn btn-primary">buy</a>
     </div> 
 </div>
-
+</div>
 <!-- .............................................. -->
 
 
